# HFT-Agent-Team

./: .env.example  .gitignore  LICENSE  README.md  plan.md  pyproject.toml
agents/: consolidation.py  consolidation_loop.py  formatting.py  graph.py  limits.py  llm.py  market_analyst.py  orchestrator.py  portfolio_manager.py  reflection.py  reflection_loop.py  researcher.py  risk_manager.py  schemas.py  state.py  trader.py
agents/tests/: conftest.py  test_consolidation.py  test_consolidation_loop.py  test_formatting.py  test_graph.py  test_market_analyst.py  test_portfolio_manager.py  test_reflection.py  test_reflection_loop.py  test_researcher.py  test_risk_manager.py  test_trader.py
api/: deps.py  main.py  schemas.py
api/routers/: backtest.py  consolidate.py  cycle.py  demo.py  lessons.py  market.py  memory.py  portfolio.py  reflect.py  regime.py  trades.py
api/tests/: conftest.py  test_backtest.py  test_consolidate.py  test_cycle.py  test_lessons.py  test_portfolio.py  test_reflect.py  test_regime.py  test_trades.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
memory/: __init__.py  client.py  schemas.py
memory/tests/: conftest.py  test_client_integration.py  test_schemas.py
scripts/: hello_memory.py  inspect_memories.py  run_backtest.py  run_memory_server.sh  serve.sh
sim/: data_loader.py  db.py  engine.py  market_data.py  metrics.py  models.py
sim/strategies/: moving_average_crossover.py
sim/tests/: conftest.py  test_data_loader.py  test_determinism.py  (+2 more)
(+14 files in other folders)
