[project]
name = "trading-brain"
version = "0.1.0"
description = "Memory-centric, self-improving multi-agent trading system built on Supermemory"
requires-python = ">=3.11"
dependencies = [
    "supermemory>=3.50.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory"]

[tool.pytest.ini_options]
testpaths = ["memory/tests"]
