[project]
name = "trading-brain"
version = "0.1.0"
description = "Memory-centric, self-improving multi-agent trading system built on Supermemory"
requires-python = ">=3.11"
dependencies = [
    "supermemory>=3.50.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "sqlmodel>=0.0.22",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "yfinance>=0.2.43",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory", "sim", "api", "agents"]

[tool.pytest.ini_options]
testpaths = ["memory/tests", "sim/tests", "api/tests", "agents/tests"]
markers = ["live: requires a real LLM call (skipped automatically without GROQ_API_KEY)"]
